--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5001
-MYSQL_HOST=127.0.0.1
-MYSQL_USER=root
-MYSQL_PASSWORD=root
+MYSQL_HOST=my-sql-server.mysql.database.azure.com
+MYSQL_USER=testadmin
+MYSQL_PASSWORD=Password@123
 MYSQL_DATABASE=online_store
 NODE_ENV=development
 JWT_SECRET=root
